# vmpacking

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  basic_example.cpp
scripts/: make_tree.py  mk_sample_general.py  mk_sample_tree.py  mkclustertree.py  mktree.py
src/: CMakeLists.txt  Guest.cpp  Guest.h  Host.cpp  Host.h  Instance.cpp  Instance.h  InstanceLoader.cpp  InstanceLoader.h  Packing.cpp  Packing.h  main.cpp  vmp_clustertreeinstance.cpp  vmp_clustertreeinstance.h  vmp_clustertreeinstanceloader.cpp  vmp_clustertreeinstanceloader.h  vmp_commontypes.h  vmp_generalinstance.cpp  vmp_generalinstance.h  vmp_generalinstanceloader.cpp  vmp_generalinstanceloader.h  vmp_guest.cpp  vmp_guest.h  vmp_host.cpp  vmp_host.h  vmp_instance.cpp  vmp_instance.h  vmp_instanceloader.cpp  vmp_instanceloader.h  vmp_iterators.h  vmp_maximisers.cpp  vmp_maximisers.h  vmp_packing.cpp  vmp_packing.h  vmp_solvers.cpp  vmp_solvers.h  vmp_solverutils.cpp  vmp_solverutils.h  vmp_treeinstance.cpp  vmp_treeinstance.h  (+3 more)
src/parsers/: vmp_clustertreeinstanceparser.cpp  vmp_clustertreeinstanceparser.h  vmp_generalinstanceparser.cpp  vmp_generalinstanceparser.h  vmp_treeinstanceparser.cpp  vmp_treeinstanceparser.h
test/: CMakeLists.txt  t_solvers.cpp  t_solverutils.cpp
